--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
         <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+  <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+  <a href="smart-mirror.html" class="text-sm font-semibold leading-6 text-white">Chytré zrcadlo</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
@@ -71,6 +72,13 @@
             se členem</a>
           <a href="#o-nas" class="text-sm font-semibold leading-6 text-white">Zjistit více. <span
               aria-hidden="true">→</span></a>
+        </div>
+        <div class="mt-6">
+          <a href="#additional-services"
+            class="inline-flex items-center justify-center px-4 py-2 text-sm font-semibold bg-white rounded-md shadow-sm text-accent hover:bg-white/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">
+            New smart fitness mirror, learn more.
+            <span aria-hidden="true" class="ml-2">→</span>
+          </a>
         </div>
       </div>
     </div>
@@ -330,6 +338,80 @@
         <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Pronájem skříněk</p>
       </div>
 
+      <!-- Smart fitness mirror - start -->
+      <div class="max-w-3xl mx-auto mt-8">
+        <div class="p-8 bg-white rounded-2xl ring-1 ring-gray-200">
+          <div class="flex items-center justify-between gap-x-4">
+            <h3 class="text-lg font-semibold leading-8 text-gray-900">Chytré fitness zrcadlo</h3>
+            <div class="flex items-center gap-x-2">
+              <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">První měsíc
+                zdarma</span>
+              <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">Vyžaduje
+                rezervaci</span>
+            </div>
+          </div>
+
+          <p class="mt-4 text-sm leading-6 text-gray-600">
+            Profesionální domácí fitness zrcadlo se zabudovaným multi-touch HD displejem a množstvím interaktivních
+            funkcí pro personalizovaný trénink přímo u nás v centru.
+          </p>
+
+          <ul role="list" class="mt-6 space-y-3 text-sm leading-6 text-gray-600">
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Vysoce reflexní profesionální domácí zrcadlo s multi-touch HD dotykovým displejem pro snadnou navigaci a
+              ovládání.
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Personalizované tréninkové plány generované podle vašich cílů (hubnutí, nárůst svalů, zlepšení
+              flexibility) s přizpůsobením obtížnosti podle postupu.
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Reálná zpětná vazba a sledování výkonu v reálném čase pomocí pokročilých senzorů (spálené kalorie, tep,
+              počet opakování).
+            </li>
+            <li class="flex gap-x-3">
+              <svg class="flex-none w-5 h-6 text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
+                  clip-rule="evenodd" />
+              </svg>
+              Vestavěné reproduktory a mikrofon pro kvalitní zvuk a ovládání hlasovými příkazy.
+            </li>
+          </ul>
+
+          <p class="mt-4 text-sm leading-6 text-gray-700">
+            Poznámka: zrcadlo je k dispozici pouze po rezervaci. První měsíc používání je zdarma, po uplynutí zkušební
+            doby se zrcadlo
+            stává placeným doplňkem k členství (platba měsíčně). Pro rezervaci použijte tlačítko níže.
+          </p>
+
+          <div class="mt-8">
+
+            <div class="reservanto-widget" data-text="Rezervovat" data-id="23970" data-color-text="#ffffff"
+              data-color-text-shadow="#078185" data-color-bg="#7c3aed" data-color-bg-hover="#6d28d9"
+              data-color-boxshadow="#078185"></div>
+            <a href="smart-mirror.html" class="ml-4 text-sm font-medium leading-6 text-gray-700 underline">Více
+              informací</a>
+          </div>
+        </div>
+      </div>
+      <!-- Smart fitness mirror - end -->
+
       <div class="max-w-3xl mx-auto mt-12">
         <div class="p-8 bg-white rounded-2xl ring-1 ring-gray-200">
           <div class="flex items-center justify-between gap-x-4">
@@ -378,6 +460,8 @@
           </div>
         </div>
       </div>
+
+
     </div>
   </section>
 
@@ -630,5 +714,7 @@
     };
   }
 </script>
+<script defer id="reservanto-widget-script" type="text/javascript"
+  src="https://booking.reservanto.cz/Script/reservanto-script.js?id=23970"></script>
 
 </html>
