--- a/smart-mirror.html
+++ b/smart-mirror.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Olympia Gym - kontaktujte nás</title>
+  <title>Olympia Gym - chytré fitness zrcadlo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/static/output.css" />
   <link
@@ -13,10 +13,10 @@
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
   <meta name="description" content="Olympia Gym - pro ty co chtejí cvičit." />
-  <meta property="og:title" content="Olympia Gym - kontaktujte nás" />
+  <meta property="og:title" content="Olympia Gym - Galerie" />
   <meta property="og:description" content="Olympia Gym - pro ty co chtejí cvičit." />
   <meta property="og:image" content="/static/images/og_image.png" />
-  <meta property="og:url" content="https://olympiagym.cz/rules.html" />
+  <meta property="og:url" content="https://olympiagym.cz/fitness-mirror.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Olympia Gym" />
   <meta property="og:locale" content="cs_CZ" />
@@ -41,7 +41,7 @@
   <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
   <a href="smart-mirror.html" class="text-sm font-semibold leading-6 text-white">Chytré zrcadlo</a>
   <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+  <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="en/index_en.html"
@@ -52,40 +52,70 @@
     </nav>
   </header>
 
-  <section class="px-6 py-24 sm:py-16 lg:px-8">
-    <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:py-20 lg:px-8">
-      <div class="max-w-2xl mx-auto text-center lg:max-w-4xl">
-        <h2 class="text-3xl font-extrabold text-gray-900">Navštivte nás</h2>
-        <p class="mt-4 text-lg text-gray-500">V objektu Olympie naproti Alberta kousek od Globusu.</p>
-      </div>
-      <div class="mt-16 lg:mt-20">
-        <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-          <div class="overflow-hidden rounded-lg">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1268.7516117774915!2d18.155620778792336!3d49.84386094541286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e1006ea78481%3A0xff3b65ba19957e14!2sOlympia%20Gym%2024%2F7!5e0!3m2!1sen!2scz!4v1734029799431!5m2!1sen!2scz"
-              width="100%" height="480" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <main class="px-6 py-16 mx-auto max-w-7xl lg:px-8">
+    <section class="mx-auto max-w-7xl">
+      <div class="grid items-center grid-cols-1 gap-8 md:grid-cols-2">
+        <div class="order-2 md:order-1">
+          <h1 class="text-3xl font-semibold tracking-tight text-gray-900">Chytré fitness zrcadlo</h1>
+          <p class="mt-4 text-lg leading-8 text-gray-600">Interaktivní tréninkové zrcadlo s dotykovým HD displejem, osobními plány, zpětnou vazbou a integrovanými tréninky — profesionální zážitek přímo v Olympia Gym.</p>
+
+          <div class="flex flex-col gap-3 mt-6 sm:flex-row sm:items-center sm:gap-4">
+            <div class="reservanto-widget" data-text="Rezervovat" data-id="23970" data-color-text="#ffffff" data-color-text-shadow="#078185" data-color-bg="#7c3aed" data-color-bg-hover="#6d28d9" data-color-boxshadow="#078185"></div>
           </div>
-          <div>
-            <div class="max-w-full mx-auto overflow-hidden rounded-lg">
-              <div class="px-6 py-4">
-                <h3 class="text-lg font-medium text-gray-900">Naše adresa</h3>
-                <p class="mt-1 text-gray-600">Ludvíka Podéště 1974/25, 708 00 Ostrava</p>
-              </div>
-              <div class="px-6 py-4 border-t border-gray-200">
-                <h3 class="text-lg font-medium text-gray-900">Otevřeno</h3>
-                <p class="mt-1 text-gray-600">Pondělí - Neděle: Nonstop</p>
-              </div>
-              <div class="px-6 py-4 border-t border-gray-200">
-                <h3 class="text-lg font-medium text-gray-900">Contact</h3>
-                <p class="mt-1 text-gray-600">Email: olympiagymcz@gmail.com</p>
-                <p class="mt-1 text-gray-600">Telefon: +420 735 935 028</p>
-              </div>
-            </div>
+        </div>
+
+        <div class="order-1 md:order-2">
+          <div class="flex items-center justify-center overflow-hidden rounded-lg shadow-lg bg-gray-50">
+             <img src="/static/images/mirror/imbody_sport_4.jpg" alt="Chytré fitness zrcadlo - náhled" class="object-cover w-full h-[28rem]" />
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section class="grid grid-cols-1 gap-12 mt-12 md:grid-cols-3 md:items-start">
+      <div class="md:col-span-2">
+        <h2 class="text-2xl font-semibold text-gray-900">Přehled</h2>
+        <p class="mt-4 text-gray-700">Chytré fitness zrcadlo přináší profesionální zážitek z tréninku přímo do Olympia Gym. Nabízí kombinaci tréninku síly a kondice, pokročilé sledování výkonu a interaktivní tréninky řízené AI.</p>
+
+        <ul class="mt-6 space-y-3 text-gray-700 list-disc list-inside">
+          <li><strong>Dotykový HD displej:</strong> multi-touch obrazovka pro snadné ovládání tréninků a interaktivní rozhraní.</li>
+          <li><strong>Personalizované tréninkové plány:</strong> zrcadlo generuje doporučení podle cíle a pokroku uživatele.</li>
+          <li><strong>Reálná zpětná vazba:</strong> senzory a software sledují provedení cviků a poskytují okamžité korekce a metriky (počty opakování, výkon, spálené kalorie).</li>
+          <li><strong>Bezpečnostní asistence:</strong> při potížích systém dokáže automaticky upravit zátěž nebo zastavit stroj.</li>
+          <li><strong>Zvuk a hlasové ovládání:</strong> integrované reproduktory a mikrofon pro hands-free ovládání a kvalitní přenos zvuku.</li>
+        </ul>
+      </div>
+
+      <aside class="md:col-span-1">
+        <h3 class="text-xl font-semibold text-gray-900">Důležité informace o používání</h3>
+        <div class="mt-4 space-y-3 text-gray-700">
+          <p>Chytré zrcadlo je doplňková služba k běžnému členství v Olympia Gym. Po zkušební dobu do konce října je užívání zdarma; po uplynutí zkušebního období bude zrcadlo zpoplatněno podle aktuálního ceníku.</p>
+          <p>Pro zajištění dostupnosti je nutná <strong>rezervace</strong>.</p>
+          <p><strong>První použití</strong> vyžaduje krátké zaškolení s instruktorem. Instruktor pomůže nastavit uživatelský profil, vysvětlí ovládání a doporučí vhodný tréninkový plán.</p>
+        </div>
+      </aside>
+    </section>
+
+    <section class="mt-12">
+      <div class="grid grid-cols-1 gap-6 mt-6 sm:grid-cols-2 lg:grid-cols-3">
+        <figure class="overflow-hidden bg-white rounded-lg shadow">
+          <img class="object-cover w-full h-60" src="/static/images/mirror/imbody_sport_4.jpg" alt="Chytré zrcadlo - detail" />
+        </figure>
+        <figure class="overflow-hidden bg-white rounded-lg shadow">
+          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-male.jpg" alt="Ukázka tréninku - muž" />
+        </figure>
+        <figure class="overflow-hidden bg-white rounded-lg shadow">
+          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-woman.jpg" alt="Ukázka tréninku - žena" />
+        </figure>
+      </div>
+    </section>
+
+    <section class="p-6 mt-12 bg-white rounded-lg shadow-sm">
+      <h2 id="Jak to funguje" class="text-2xl font-semibold text-gray-900">Jak to funguje</h2>
+      <p class="mt-4 text-gray-700">Rezervovaný čas na zrcadlo trvá obvykle 30–60 minut (dle druhu tréninku). Při první rezervaci vám instruktor na krátkém seznámení a nastavení profilu můžete zrcadlo již užívat sami. Po zkušebním období bude služba součástí placených doplňků — aktuální informace o cenách nalezete na webu nebo vám rádi poskytneme e-mailem.</p>
+      <p class="mt-4 text-gray-700">Máte-li dotazy kontaktujte nás přes <a class="underline text-accent hover:text-accent-600" href="contact.html">stránku Kontakt</a></p>
+    </section>
+  </main>
 
   <footer class="">
     <div class="px-6 py-12 mx-auto max-w-7xl md:flex md:items-center md:justify-between lg:px-8">
@@ -116,6 +146,8 @@
       </div>
     </div>
   </footer>
+
+  <script defer id="reservanto-widget-script" type="text/javascript" src="https://booking.reservanto.cz/Script/reservanto-script.js?id=23970"></script>
 </body>
 
 </html>
