--- a/en/contact_en.html
+++ b/en/contact_en.html
@@ -38,9 +38,10 @@
       <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
         <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
-        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
-        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
+  <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
+  <a href="smart-mirror_en.html" class="text-sm font-semibold leading-6 text-white">Smart Mirror</a>
+  <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
+  <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
       <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
