--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
           <img class="w-auto h-8" src="/static/images/favicon.png" alt="" />
         </a>
       </div>
-      <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
+      <div
+        class="flex flex-wrap items-center gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
         <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-  <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-  <a href="smart-mirror.html" class="text-sm font-semibold leading-6 text-white">Chytré zrcadlo</a>
+        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
+        <a href="smart-mirror.html" class="text-sm font-semibold leading-6 text-white">Chytré zrcadlo</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
@@ -335,15 +336,15 @@
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-base font-semibold leading-7 text-accent">Dodatečné služby</h2>
-        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Pronájem skříněk</p>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Chytré fitness zrcadlo a Skříňky</p>
       </div>
 
       <!-- Smart fitness mirror - start -->
       <div class="max-w-3xl mx-auto mt-8">
         <div class="p-8 bg-white rounded-2xl ring-1 ring-gray-200">
-          <div class="flex items-center justify-between gap-x-4">
+          <div class="flex flex-wrap items-center justify-between gap-x-4">
             <h3 class="text-lg font-semibold leading-8 text-gray-900">Chytré fitness zrcadlo</h3>
-            <div class="flex items-center gap-x-2">
+            <div class="flex flex-wrap ml-auto gap-x-2 gap-y-2">
               <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">První měsíc
                 zdarma</span>
               <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">Vyžaduje
