--- a/en/index_en.html
+++ b/en/index_en.html
@@ -35,13 +35,14 @@
           <img class="w-auto h-8" src="/static/images/favicon.png" alt="" />
         </a>
       </div>
-      <div class="flex items-center gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
+      <div
+        class="flex flex-wrap items-center gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
         <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-  <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
-  <a href="smart-mirror_en.html" class="text-sm font-semibold leading-6 text-white">Smart Mirror</a>
-  <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
-  <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
+        <a href="smart-mirror_en.html" class="text-sm font-semibold leading-6 text-white">Smart mirror</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
       <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
