--- a/en/index_en.html
+++ b/en/index_en.html
@@ -55,7 +55,7 @@
 
   <section class="relative min-h-screen" id="hero">
     <div class="absolute inset-0 bg-center bg-cover bg-hero-bg-mobile md:bg-hero-bg">
-      <div class="absolute inset-0 bg-linear-to-r from-black/30 to-black/60"></div>
+      <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-black/70"></div>
     </div>
 
     <div class="relative z-10 max-w-2xl py-32 mx-auto sm:py-48 lg:py-56">
