--- a/en/smart-mirror_en.html
+++ b/en/smart-mirror_en.html
@@ -23,6 +23,7 @@
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
+    <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e" data-utcoffset="2"></script>
 </head>
 
 <body class="bg-gray-100">
