--- a/smart-mirror.html
+++ b/smart-mirror.html
@@ -23,6 +23,7 @@
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
+    <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e" data-utcoffset="2"></script>
 </head>
 
 <body class="bg-gray-100">
@@ -45,10 +46,11 @@
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex items-center justify-end gap-x-2 grow shrink-0 basis-1/3">
-        <a href="en/index_en.html"
-          class="text-sm font-semibold leading-6 text-white">EN<span aria-hidden="true">🇬🇧</span></a>
+        <a href="en/index_en.html" class="text-sm font-semibold leading-6 text-white">EN<span
+            aria-hidden="true">🇬🇧</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="rounded-md bg-accent px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-accent-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">Správa
+          členství<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
@@ -58,16 +60,20 @@
       <div class="grid items-center grid-cols-1 gap-8 md:grid-cols-2">
         <div class="order-2 md:order-1">
           <h1 class="text-3xl font-semibold tracking-tight text-gray-900">Chytré fitness zrcadlo</h1>
-          <p class="mt-4 text-lg leading-8 text-gray-600">Interaktivní tréninkové zrcadlo s dotykovým HD displejem, osobními plány, zpětnou vazbou a integrovanými tréninky — profesionální zážitek přímo v Olympia Gym.</p>
+          <p class="mt-4 text-lg leading-8 text-gray-600">Interaktivní tréninkové zrcadlo s dotykovým HD displejem,
+            osobními plány, zpětnou vazbou a integrovanými tréninky — profesionální zážitek přímo v Olympia Gym.</p>
 
           <div class="flex flex-col gap-3 mt-6 sm:flex-row sm:items-center sm:gap-4">
-            <div class="reservanto-widget" data-text="Rezervovat" data-id="23970" data-color-text="#ffffff" data-color-text-shadow="#078185" data-color-bg="#7c3aed" data-color-bg-hover="#6d28d9" data-color-boxshadow="#078185"></div>
+            <div class="reservanto-widget" data-text="Rezervovat" data-id="23970" data-color-text="#ffffff"
+              data-color-text-shadow="#078185" data-color-bg="#7c3aed" data-color-bg-hover="#6d28d9"
+              data-color-boxshadow="#078185"></div>
           </div>
         </div>
 
         <div class="order-1 md:order-2">
           <div class="flex items-center justify-center overflow-hidden rounded-lg shadow-lg bg-gray-50">
-             <img src="/static/images/mirror/imbody_sport_4.jpg" alt="Chytré fitness zrcadlo - náhled" class="object-cover w-full h-[28rem]" />
+            <img src="/static/images/mirror/imbody_sport_4.jpg" alt="Chytré fitness zrcadlo - náhled"
+              class="object-cover w-full h-[28rem]" />
           </div>
         </div>
       </div>
@@ -76,23 +82,32 @@
     <section class="grid grid-cols-1 gap-12 mt-12 md:grid-cols-3 md:items-start">
       <div class="md:col-span-2">
         <h2 class="text-2xl font-semibold text-gray-900">Přehled</h2>
-        <p class="mt-4 text-gray-700">Chytré fitness zrcadlo přináší profesionální zážitek z tréninku přímo do Olympia Gym. Nabízí kombinaci tréninku síly a kondice, pokročilé sledování výkonu a interaktivní tréninky řízené AI.</p>
+        <p class="mt-4 text-gray-700">Chytré fitness zrcadlo přináší profesionální zážitek z tréninku přímo do Olympia
+          Gym. Nabízí kombinaci tréninku síly a kondice, pokročilé sledování výkonu a interaktivní tréninky řízené AI.
+        </p>
 
         <ul class="mt-6 space-y-3 text-gray-700 list-disc list-inside">
-          <li><strong>Dotykový HD displej:</strong> multi-touch obrazovka pro snadné ovládání tréninků a interaktivní rozhraní.</li>
-          <li><strong>Personalizované tréninkové plány:</strong> zrcadlo generuje doporučení podle cíle a pokroku uživatele.</li>
-          <li><strong>Reálná zpětná vazba:</strong> senzory a software sledují provedení cviků a poskytují okamžité korekce a metriky (počty opakování, výkon, spálené kalorie).</li>
-          <li><strong>Bezpečnostní asistence:</strong> při potížích systém dokáže automaticky upravit zátěž nebo zastavit stroj.</li>
-          <li><strong>Zvuk a hlasové ovládání:</strong> integrované reproduktory a mikrofon pro hands-free ovládání a kvalitní přenos zvuku.</li>
+          <li><strong>Dotykový HD displej:</strong> multi-touch obrazovka pro snadné ovládání tréninků a interaktivní
+            rozhraní.</li>
+          <li><strong>Personalizované tréninkové plány:</strong> zrcadlo generuje doporučení podle cíle a pokroku
+            uživatele.</li>
+          <li><strong>Reálná zpětná vazba:</strong> senzory a software sledují provedení cviků a poskytují okamžité
+            korekce a metriky (počty opakování, výkon, spálené kalorie).</li>
+          <li><strong>Bezpečnostní asistence:</strong> při potížích systém dokáže automaticky upravit zátěž nebo
+            zastavit stroj.</li>
+          <li><strong>Zvuk a hlasové ovládání:</strong> integrované reproduktory a mikrofon pro hands-free ovládání a
+            kvalitní přenos zvuku.</li>
         </ul>
       </div>
 
       <aside class="md:col-span-1">
         <h3 class="text-xl font-semibold text-gray-900">Důležité informace o používání</h3>
         <div class="mt-4 space-y-3 text-gray-700">
-          <p>Chytré zrcadlo je doplňková služba k běžnému členství v Olympia Gym. Po zkušební dobu do konce října je užívání zdarma; po uplynutí zkušebního období bude zrcadlo zpoplatněno podle aktuálního ceníku.</p>
+          <p>Chytré zrcadlo je doplňková služba k běžnému členství v Olympia Gym. Po zkušební dobu do konce října je
+            užívání zdarma; po uplynutí zkušebního období bude zrcadlo zpoplatněno podle aktuálního ceníku.</p>
           <p>Pro zajištění dostupnosti je nutná <strong>rezervace</strong>.</p>
-          <p><strong>První použití</strong> vyžaduje krátké zaškolení s instruktorem. Instruktor pomůže nastavit uživatelský profil, vysvětlí ovládání a doporučí vhodný tréninkový plán.</p>
+          <p><strong>První použití</strong> vyžaduje krátké zaškolení s instruktorem. Instruktor pomůže nastavit
+            uživatelský profil, vysvětlí ovládání a doporučí vhodný tréninkový plán.</p>
         </div>
       </aside>
     </section>
@@ -100,21 +115,28 @@
     <section class="mt-12">
       <div class="grid grid-cols-1 gap-6 mt-6 sm:grid-cols-2 lg:grid-cols-3">
         <figure class="overflow-hidden bg-white rounded-lg shadow">
-          <img class="object-cover w-full h-60" src="/static/images/mirror/imbody_sport_4.jpg" alt="Chytré zrcadlo - detail" />
+          <img class="object-cover w-full h-60" src="/static/images/mirror/imbody_sport_4.jpg"
+            alt="Chytré zrcadlo - detail" />
         </figure>
         <figure class="overflow-hidden bg-white rounded-lg shadow">
-          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-male.jpg" alt="Ukázka tréninku - muž" />
+          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-male.jpg"
+            alt="Ukázka tréninku - muž" />
         </figure>
         <figure class="overflow-hidden bg-white rounded-lg shadow">
-          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-woman.jpg" alt="Ukázka tréninku - žena" />
+          <img class="object-cover w-full h-60" src="/static/images/mirror/mirror-woman.jpg"
+            alt="Ukázka tréninku - žena" />
         </figure>
       </div>
     </section>
 
     <section class="p-6 mt-12 bg-white rounded-lg shadow-sm">
       <h2 id="Jak to funguje" class="text-2xl font-semibold text-gray-900">Jak to funguje</h2>
-      <p class="mt-4 text-gray-700">Rezervovaný čas na zrcadlo trvá obvykle 30–60 minut (dle druhu tréninku). Při první rezervaci vám instruktor na krátkém seznámení a nastavení profilu můžete zrcadlo již užívat sami. Po zkušebním období bude služba součástí placených doplňků — aktuální informace o cenách nalezete na webu nebo vám rádi poskytneme e-mailem.</p>
-      <p class="mt-4 text-gray-700">Máte-li dotazy kontaktujte nás přes <a class="underline text-accent hover:text-accent-600" href="contact.html">stránku Kontakt</a></p>
+      <p class="mt-4 text-gray-700">Rezervovaný čas na zrcadlo trvá obvykle 30–60 minut (dle druhu tréninku). Při první
+        rezervaci vám instruktor na krátkém seznámení a nastavení profilu můžete zrcadlo již užívat sami. Po zkušebním
+        období bude služba součástí placených doplňků — aktuální informace o cenách nalezete na webu nebo vám rádi
+        poskytneme e-mailem.</p>
+      <p class="mt-4 text-gray-700">Máte-li dotazy kontaktujte nás přes <a
+          class="underline text-accent hover:text-accent-600" href="contact.html">stránku Kontakt</a></p>
     </section>
   </main>
 
@@ -148,7 +170,9 @@
     </div>
   </footer>
 
-  <script defer id="reservanto-widget-script" type="text/javascript" src="https://booking.reservanto.cz/Script/reservanto-script.js?id=23970"></script>
+  <script defer id="reservanto-widget-script" type="text/javascript"
+    src="https://booking.reservanto.cz/Script/reservanto-script.js?id=23970"></script>
+
 </body>
 
 </html>
