--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </a>
       </div>
       <div
-        class="flex flex-wrap items-center gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
+        class="flex flex-wrap items-center justify-between gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
         <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
