--- a/en/rules_en.html
+++ b/en/rules_en.html
@@ -37,7 +37,7 @@
         </a>
       </div>
       <div
-        class="flex flex-wrap items-center gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
+        class="flex flex-wrap items-center justify-between gap-x-4 gap-y-3 max-xs:order-last max-xs:basis-full max-xs:grid max-xs:grid-cols-3 max-xs:text-center">
         <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
