--- a/en/index_en.html
+++ b/en/index_en.html
@@ -73,6 +73,13 @@
           <a href="#o-nas" class="text-sm font-semibold leading-6 text-white">Learn more. <span
               aria-hidden="true">→</span></a>
         </div>
+        <div class="mt-6">
+          <a href="#additional-services"
+            class="inline-flex items-center justify-center px-4 py-2 text-sm font-semibold bg-white rounded-md shadow-sm text-accent hover:bg-white/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">
+            New smart fitness mirror. Learn more.
+            <span aria-hidden="true" class="ml-2">→</span>
+          </a>
+        </div>
       </div>
     </div>
   </section>
