--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="mt-6">
           <a href="#additional-services"
             class="inline-flex items-center justify-center px-4 py-2 text-sm font-semibold bg-white rounded-md shadow-sm text-accent hover:bg-white/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-600">
-            New smart fitness mirror, learn more.
+            Nové chytré fitness zrcadlo. Zjistit více.
             <span aria-hidden="true" class="ml-2">→</span>
           </a>
         </div>
