--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         <div class="flex flex-col justify-between p-8 bg-white rounded-2xl ring-1 ring-gray-200">
           <div>
             <div class="flex items-center justify-between gap-x-4">
-              <h3 class="text-lg font-semibold leading-8 text-gray-900">Referenční program</h3>
+              <h3 class="text-lg font-semibold leading-8 text-gray-900">Odměna za doporučení</h3>
               <span class="px-3 py-1 text-sm font-medium rounded-full bg-accent/10 text-accent">-100
                 Kč/člen</span>
             </div>
