--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
-    <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e" data-utcoffset="2"></script>
+  <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e"
+    data-utcoffset="2"></script>
 </head>
 
 <body class="bg-gray-100">
@@ -398,8 +399,8 @@
 
           <p class="mt-4 text-sm leading-6 text-gray-700">
             Poznámka: zrcadlo je k dispozici pouze po rezervaci. První měsíc používání je zdarma, po uplynutí zkušební
-            doby se zrcadlo
-            stává placeným doplňkem k členství (platba měsíčně). Pro rezervaci použijte tlačítko níže.
+            doby se zrcadlo stává placeným doplňkem k členství (platba měsíčně).
+            <strong>Pro rezervaci použijte tlačítko níže. První termín si prosím rezervujte v pracovních hodinách mezi 9:00 a 17:00.</strong>
           </p>
 
           <div class="mt-8">
