--- a/smart-mirror.html
+++ b/smart-mirror.html
@@ -23,7 +23,8 @@
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
-    <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e" data-utcoffset="2"></script>
+  <script src="https://cdn.counter.dev/script.js" data-id="c7b021d7-f58c-4cc1-9dd7-80792dcdb31e"
+    data-utcoffset="2"></script>
 </head>
 
 <body class="bg-gray-100">
@@ -107,7 +108,8 @@
             užívání zdarma; po uplynutí zkušebního období bude zrcadlo zpoplatněno podle aktuálního ceníku.</p>
           <p>Pro zajištění dostupnosti je nutná <strong>rezervace</strong>.</p>
           <p><strong>První použití</strong> vyžaduje krátké zaškolení s instruktorem. Instruktor pomůže nastavit
-            uživatelský profil, vysvětlí ovládání a doporučí vhodný tréninkový plán.</p>
+            <strong>uživatelský profil, vysvětlí ovládání a doporučí vhodný tréninkový plán. Prosím rezervujte si první termín v
+            pracovních hodinách mezi 9:00 a 17:00.</strong></p>
         </div>
       </aside>
     </section>
